vendor/pin-project-1.0.7/tests/ui/pin_project/packed_sneaky-2.stderr
error: #[pin_project] attribute may not be used on #[repr(packed)] types
  --> $DIR/packed_sneaky-2.rs:4:1
   |
4  | / hidden_repr_macro! { //~ ERROR may not be used on #[repr(packed)] types
5  | |     #[pin_project]
6  | |     struct B {
7  | |         #[pin]
8  | |         f: u32,
9  | |     }
10 | | }
   | |_^
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
